@@ -100,6 +100,7 @@ HARBOUR STRTRAN();
 HARBOUR TCLASS();
 HARBOUR TRANSFORM();
 HARBOUR DATETIME();
+HARBOUR DOW();
 HARBOUR __ASTATIC();
 HARBOUR __STATIC();
 HARBOUR __GLOBALSTACKLEN();
@@ -223,6 +224,7 @@ static SYMBOL symbols[] = {
 { "TCLASS",         FS_PUBLIC, TCLASS        , 0 },
 { "TRANSFORM",      FS_PUBLIC, TRANSFORM     , 0 },
 { "DATETIME",       FS_PUBLIC, DATETIME      , 0 },
+{ "DOW",            FS_PUBLIC, DOW           , 0 },
 { "__ASTATIC",      FS_PUBLIC, __ASTATIC     , 0 },
 { "__STATIC",       FS_PUBLIC, __STATIC      , 0 },
 { "__GLOBALSTACKLEN", FS_PUBLIC, __GLOBALSTACKLEN, 0 },
